[gd_scene load_steps=3 format=3 uid="uid://bwawk0k02t6bj"]

[ext_resource type="Texture2D" uid="uid://cuu02hpmhuuu2" path="res://Image/Menu/Connexion.png" id="1_7117v"]
[ext_resource type="Script" path="res://Script/Menu/ConnectionScreen.gd" id="2_y4aov"]

[node name="ConnexionScreen" type="Sprite2D"]
texture = ExtResource("1_7117v")
centered = false
script = ExtResource("2_y4aov")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="EmailText" type="LineEdit" parent="Control"]
layout_mode = 0
offset_left = 693.0
offset_top = 588.0
offset_right = 1243.0
offset_bottom = 652.0
theme_override_font_sizes/font_size = 30
text = "guest@gmail.com"

[node name="PasswordText" type="LineEdit" parent="Control"]
layout_mode = 0
offset_left = 694.0
offset_top = 739.0
offset_right = 1244.0
offset_bottom = 804.0
theme_override_font_sizes/font_size = 40
text = "password"
secret = true

[node name="LoginButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 663.0
offset_top = 885.0
offset_right = 948.0
offset_bottom = 939.0
mouse_default_cursor_shape = 2

[node name="RegisterScreenButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 984.0
offset_top = 884.0
offset_right = 1270.0
offset_bottom = 940.0
mouse_default_cursor_shape = 2

[node name="ErreurTextConnection" type="RichTextLabel" parent="."]
offset_left = 676.0
offset_top = 816.0
offset_right = 1257.0
offset_bottom = 870.0
theme_override_font_sizes/normal_font_size = 20

[connection signal="button_down" from="LoginButton" to="." method="_on_login_button_button_down"]
[connection signal="button_down" from="RegisterScreenButton" to="." method="_on_register_screen_button_button_down"]
